--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blossom-syntax",
+  "name": "loona-syntax",
   "theme": "syntax",
   "version": "0.5.0",
   "description": "Clean, dark, high-contrast theme based off One Dark syntax.",
